--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,7 @@
     <packaging>pom</packaging>
     <name>Clue parent POM</name>
     <url>https://clue.github.io/</url>
-    <description>A generic parent Maven POM file that comprise some opinionated configurations
-        and plugins to make it easy to manage the building, testing and releasing cycle with minimal configuration in the children projects.</description>
+    <description>A generic Maven parent POM file that comprise some opinionated configurations and plugins to make it easy to manage the building, testing and releasing cycle with minimal configuration in the children projects.</description>
     <inceptionYear>2016</inceptionYear>
     <organization>
         <name>${organization.name}</name>
