[maven-release-plugin] prepare release release-1.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,10 @@
     GNU General Public License for more details.
 
     You should have received a copy of the GNU General Public License
-    along with Clue.  If not, see <http://www.gnu.org/licenses/>.
+    along with Clue.  If not, see <http://www.gnu.org/licenses />.
 
 -->
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.sonatype.oss</groupId>
@@ -33,7 +31,7 @@
     </prerequisites>
     <groupId>com.cluehub</groupId>
     <artifactId>cluehub-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
     <name>Clue parent POM</name>
     <url>https://clue.github.io/</url>
@@ -64,7 +62,7 @@
         </developer>
     </developers>
     <scm>
-        <tag>HEAD</tag>
+        <tag>release-1.0.0</tag>
         <url>https://github.com/cluehub/cluehub-parent.git</url>
         <connection>scm:git:git@github.com:cluehub/cluehub-parent.git</connection>
         <developerConnection>scm:git:git@github.com:cluehub/cluehub-parent.git</developerConnection>
