--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,8 @@
     along with Clue.  If not, see <http://www.gnu.org/licenses />.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.sonatype.oss</groupId>
@@ -35,7 +36,9 @@
     <packaging>pom</packaging>
     <name>Clue parent POM</name>
     <url>https://clue.github.io/</url>
-    <description>A generic Maven parent POM file that comprise some opinionated configurations and plugins to make it easy to manage the building, testing and releasing cycle with minimal configuration in the children projects.</description>
+    <description>A generic Maven parent POM file that comprise some opinionated configurations and plugins to make it
+        easy to manage the building, testing and releasing cycle with minimal configuration in the children projects.
+    </description>
     <inceptionYear>2016</inceptionYear>
     <organization>
         <name>${organization.name}</name>
